--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -109,7 +109,7 @@
 		<TD COLSPAN=5 BGCOLOR="#0099ff" SDVAL="0" SDNUM="2070;1046;@">
 			<DIV ALIGN=center STYLE="margin-bottom: 0.51cm; background: transparent; border: none; padding: 0cm; text-decoration: none">
 				<!-- ***DEElogo*** -->
-				<IMG SRC="image/DEElogo_1.jpg" NAME="graphics1" ALIGN=RIGHT WIDTH=200 HEIGHT=100 BORDER=0>
+				<IMG SRC="image/DEElogo_1.jpg" NAME="graphics1" ALIGN=RIGHT WIDTH=200 HEIGHT=100 alt="Image Not Found" BORDER=0>
 				<!-- Desciplina -->
 				<BR CLEAR=RIGHT>
 			</DIV>
@@ -137,7 +137,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN LANG="pt-BR">
 										<SPAN STYLE="font-style: normal">
 											<SPAN STYLE="font-weight: normal">
@@ -158,7 +158,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Arquitetura
@@ -177,7 +177,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Hardware
@@ -196,7 +196,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Software
@@ -215,7 +215,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Resultados
@@ -234,7 +234,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Conclus&otilde;es
@@ -253,7 +253,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN STYLE="font-style: normal">
 										<SPAN STYLE="font-weight: normal">
 											Refer&ecirc;ncias
@@ -274,7 +274,7 @@
 					<FONT COLOR="#000000">
 						<SPAN STYLE="text-decoration: none">
 							<FONT FACE="Thorndale, serif">
-								<FONT SIZE=1>
+								<FONT SIZE=2>
 									<SPAN LANG="pt-BR">
 										<SPAN STYLE="font-style: normal">
 											<SPAN STYLE="font-weight: normal">
@@ -321,7 +321,7 @@
         	<BR/>
         	<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
 				<A HREF="https://www.youtube.com/watch?v=xNV38nq1fqc" target="_blank">
-				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
+				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 alt="Image Not Found" BORDER=0>
 				</A>
 			</P>
 		</TD>
@@ -401,7 +401,7 @@
 			<table>
 				<tr>
 					<td ALIGN=LEFT width="40%">
-						<img src="./image/Graph/Anualkwh_1.jpg" width="300" alt="Not Found">
+						<img src="./image/Graph/Anualkwh_1.jpg" width="300" alt="Image Not Found">
 						<h4 style="color:blue; margin-left: 2.1cm;">Resposta a inclinação</h4>
 					</td>
 					<td ALIGN=LEFT width="50%">
@@ -477,7 +477,7 @@
 			<br>
 		</P>
 		<div ALIGN=CENTER STYLE="margin-left: 12px; margin-right: 100px;">
-			<img src="./image/Sensor_Actuator_Principle.jpg" width="300" alt="Not Found">
+			<img src="./image/Sensor_Actuator_Principle.jpg" width="300" alt="Image Not Found">
 			<br>
 			<b>Principio de Funcionamento Sensor</b> <A HREF="#Ref1"><span>[1]</span></A>
 		</div>
@@ -574,14 +574,14 @@
 			e baixo consumo energético.
 		</P>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-				<img src="image/arquitecture/Harvard_architecture.png" alt="Not Found" width="450">
+				<img src="image/arquitecture/Harvard_architecture.png" alt="Image Not Found" width="450">
 				<br>
 				<h4 style="color:blue; margin-left: 4.5cm;">Harvard Architecture<h4>
 		</P>
 	</section>
 	<section><h3>Diagrama de blocos do projecto</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Not Found" width="450">
+			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Image Not Found" width="450">
 			<br>
 			<br>
 			<br>
@@ -645,16 +645,16 @@
 					</p>
 				</td>
 				<td WIDTH=25% VALIGN=TOP>
-					<IMG SRC="image/software/programmer/Atmel_Ice.png" NAME="ISP_6PIN" ALIGN=BOTTOM alt="Not Found" WIDTH=250 BORDER=0>
+					<IMG SRC="image/software/programmer/Atmel_Ice.png" NAME="ISP_6PIN" ALIGN=BOTTOM alt="Image Not Found" WIDTH=250 BORDER=0>
 						<br>
 						<br>
 						<div>
 							<div>
-								<IMG SRC="image/software/ISP_JTAG/isp_6pin.png" NAME="ISP_6PIN" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
+								<IMG SRC="image/software/ISP_JTAG/isp_6pin.png" NAME="ISP_6PIN" ALIGN=BOTTOM WIDTH=250 alt="Image Not Found" BORDER=0>
 							</div>
 							<BR/>
 							<div>
-								<IMG SRC="image/software/ISP_JTAG/isp_connector.png" NAME="ISP_CONNECTOR" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
+								<IMG SRC="image/software/ISP_JTAG/isp_connector.png" NAME="ISP_CONNECTOR" ALIGN=BOTTOM WIDTH=250 alt="Image Not Found" BORDER=0>
 							</div>
 						</div>
 				</td>
@@ -733,17 +733,17 @@
 		tornado-se num sistema de <span style="color:blue;"> plug and play </span>. A lista de material esta acima representado.
 		<br>
 		<div STYLE="margin-left: 12px;">
-			<!--<img src="image/hardware/chips_1.jpg" alt="Not Found" width="150">-->
-			<!--<img src="image/hardware/DevBoard_1.jpg" alt="Not Found" width="150">-->
-			<!--<img src="image/hardware/DevBoard_2.jpg" alt="Not Found" width="150">-->
-			<!--<img src="image/hardware/ESP8266_1.jpg" alt="Not Found" width="150">-->
-			<!--<img src="image/hardware/HC595_1.jpg" alt="Not Found" width="150">-->
-			<img src="image/hardware/Kit_1.jpg" alt="Not Found" width="250">
-			<!--<img src="image/hardware/PCF8563_1.jpg" alt="Not Found" width="300">-->
-			<!--<img src="image/hardware/INA128_1.jpg" alt="Not Found" width="200">-->
-			<!--<img src="image/hardware/HC595_2.jpg" alt="Not Found" width="200">-->
-			<!--<img src="image/hardware/RS2_1.jpg" alt="Not Found" width="200">-->
-			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Not Found" width="200">-->
+			<!--<img src="image/hardware/chips_1.jpg" alt="Image Not Found" width="150">-->
+			<!--<img src="image/hardware/DevBoard_1.jpg" alt="Image Not Found" width="150">-->
+			<!--<img src="image/hardware/DevBoard_2.jpg" alt="Image Not Found" width="150">-->
+			<!--<img src="image/hardware/ESP8266_1.jpg" alt="Image Not Found" width="150">-->
+			<!--<img src="image/hardware/HC595_1.jpg" alt="Image Not Found" width="150">-->
+			<img src="image/hardware/Kit_1.jpg" alt="Image Not Found" width="250">
+			<!--<img src="image/hardware/PCF8563_1.jpg" alt="Image Not Found" width="300">-->
+			<!--<img src="image/hardware/INA128_1.jpg" alt="Image Not Found" width="200">-->
+			<!--<img src="image/hardware/HC595_2.jpg" alt="Image Not Found" width="200">-->
+			<!--<img src="image/hardware/RS2_1.jpg" alt="Image Not Found" width="200">-->
+			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Image Not Found" width="200">-->
 		</div>
 	</section>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
@@ -790,32 +790,30 @@
 <!-- ***Software*** -->
 <DIV STYLE="background-color:#eeeeee;">
 	<section><h3>Programa</h3>
-		<p ALIGN=LEFT>
-			<div style="vertical-align: top;">
-				<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
-					<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
-						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Not Found" BORDER=0>
-					</A>
-				</div>
-				&nbsp;
-				&nbsp;
-				<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 60%; display:inline-block;">
-					<pe ALIGN=TOP>
-						O programa utilizado para executar este projecto foi o Atmel Studio 7 (Version: 7.0.2397), 2019 Microship 
-						Technology.
-						<br>
-						<br>
-						Já nos é conhecido que a marca <it><b>Atmel</b><it> foi comprada pela companhia que representa os PICS ou 
-						seja a <it>Microchip</it> sendo que seu <b>IDE</b> também já supporta seus microcontroladores e programadores, 
-						o <b>MPLAB XC</b> é agora uma boa alternativa.
-						<br>
-						<br>
-						<br>
-						<br>
-					</pe>
-				</div>
+		<div style="vertical-align: top;">
+			<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
+				<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
+					<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+				</A>
 			</div>
-		</p>
+			&nbsp;
+			&nbsp;
+			<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 60%; display:inline-block;">
+				<pe ALIGN=TOP>
+					O programa utilizado para executar este projecto foi o Atmel Studio 7 (Version: 7.0.2397), 2019 Microship 
+					Technology.
+					<br>
+					<br>
+					Já nos é conhecido que a marca <it><b>Atmel</b><it> foi comprada pela companhia que representa os PICS ou 
+					seja a <it>Microchip</it> sendo que seu <b>IDE</b> também já supporta seus microcontroladores e programadores, 
+					o <b>MPLAB XC</b> é agora uma boa alternativa.
+					<br>
+					<br>
+					<br>
+					<br>
+				</pe>
+			</div>
+		</div>
 	</section>
 	<section><h3>Fluxograma</h3>
 		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
@@ -824,10 +822,10 @@
 					<TD WIDTH=5%>
 					</TD>
 					<TD WIDTH=50%>
-					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=400 alt="Not Found" BORDER=0>
+					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=400 alt="Image Not Found" BORDER=0>
 					</TD>
 					<TD VALIGN=TOP>
-						<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 alt="Not Found" BORDER=0>
+						<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 alt="Image Not Found" BORDER=0>
 					</TD>
 				</TR>
 			</TABLE>
@@ -842,16 +840,18 @@
 			este entrar e sair pelo sistema sem qualquer interferência se o sinal não for reconhecido,
 			mas só uma única vez.
 			<BR/>
-			<p ALIGN=LEFT>
-				<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0>
+			<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
+				<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
+				<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
+				<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0>
 			</p>
-			<BR/>
+			<BR>
+			<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
 			Assim temos um sistema escalavel (<it><b>"recursion"</b></it>) e de fácil manuseamento.
-			<BR/>
+			</p>
+			<BR>
 			<p ALIGN=CENTER>
-				<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Not Found" BORDER=0>
+				<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Image Not Found" BORDER=0>
 			</p>
 		</p>
 	</section>
@@ -862,6 +862,12 @@
 		Anexado [referências] tem links para literatura acerca destes assuntos.
 	</P>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
+		Com a ajuda das librarias criadas e as já existentes é que foi possivel executar este projecto, tornado o programa de facil leitura
+		e intuitivo na utilização.<br>
+		Abaixo descrito a lista das libarias usadas no codigo:
+		<br>
+		<br>
+		<IMG SRC="image/code/code_libraries_1.jpg" NAME="code_libraries_1" ALIGN=CENTER WIDTH=300 alt="Image Not Found" BORDER=0>
 		<br>
 		<br>
 	</P>
