--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -746,9 +746,43 @@
 			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Image Not Found" width="200">-->
 		</div>
 	</section>
-	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		esquemas
-	</p>
+	</section>
+	<section><h3>Projecto e Execução da Mainboard</h3>
+		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
+			Nesta secção, apenas vou representar imagens do proceso de desenvolvimento 
+			da placa mãe, desde o schematic, board e a palaca populada e pronta a usar, 
+			sera demonstrado a funcionar por video na secção de resultados desta Webpage.
+			<br>
+			<br>
+			O software utilizado foi o &xrarr;
+			<a href="https://www.autodesk.com/products/eagle/overview?plc=F360&term=1-YEAR&support=ADVANCED&quantity=1" target="_blank">
+				<span style="margin-left: 40px; color:green; ">
+					Eagle PCB designer da autodesk
+				</span>
+			</a>
+		</p>
+		<div ALIGN=CENTER STYLE="margin-left: 12px;">
+			<img src="image/board/schematic_base_1.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/schematic_header_1.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/board_base_1.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/board_header_1.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/devboard_3.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/devboard_2.jpg" alt="Image Not Found" width="650">
+			<br>
+			<br>
+			<img src="image/board/devboard_1.jpg" alt="Image Not Found" width="650">
+		</div>
+	</section>
 </DIV>
   	<!-- ***Menu 4*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
@@ -995,7 +1029,7 @@
 	</P>
 </DIV>
 <!-- ***Menu TEST*** -->
-<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
+<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE=" page-break-before: always">
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
 			<UL>
@@ -1347,6 +1381,24 @@
 			</SPAN>
 		</A>
 	</P>
+	<P STYLE="margin-bottom: 0.5cm">
+		<A NAME="_Ref14">
+		</A>
+		<SPAN LANG="en-US">
+			[14]
+		</SPAN>
+		<SPAN LANG="en-US">
+			Datasheet MM74HC595;
+		</SPAN>
+		<!-- <embed	src="https://drive.google.com/file/d/1SAChesO98eVXfei3ARQAzCiWnrMKFGA2/view?usp=sharing" type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed> -->
+		<A HREF="https://drive.google.com/file/d/1SAChesO98eVXfei3ARQAzCiWnrMKFGA2/view?usp=sharing" target="_blank">
+			<SPAN STYLE="text-decoration: none">
+				<SPAN LANG="en-US">
+					Shift Register HC595
+				</SPAN>
+			</SPAN>
+		</A>
+	</P>
 	<P ALIGN=LEFT STYLE="border: none; padding: 0cm">
 		<BR>
 	</P>
@@ -1399,3 +1451,5 @@
 </HTML>
 <!-- <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always"> -->
 <!-- <P ALIGN=LEFT STYLE="margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; border: none; padding: 0cm"> -->
+
+
