--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -320,7 +320,7 @@
       	<TD COLSPAN=1 WIDTH=65% BGCOLOR="#eeeeee">
         	<BR/>
         	<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
-				<A HREF="https://www.youtube.com/watch?v=xNV38nq1fqc" target="_blank">
+				<A HREF="https://drive.google.com/file/d/1bWr7jZ4JDo01D4qY3LCxINqDxzL4NP5Y/view?usp=sharing" target="_blank">
 				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 alt="Image Not Found" BORDER=0>
 				</A>
 			</P>
@@ -873,20 +873,19 @@
 			assim não existe redundância e o programa flui de forma <b>"One Shot"</b> podendo
 			este entrar e sair pelo sistema sem qualquer interferência se o sinal não for reconhecido,
 			mas só uma única vez.
-			<BR/>
-			<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
-				<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0>
-			</p>
 			<BR>
-			<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
+		</p>
+		<p ALIGN=CENTER>
+			<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Image Not Found" BORDER=0>
+		</p>
+		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
+			<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
+			<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0> &nbsp;
+			<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Image Not Found" BORDER=0>
+		</p>
+		<BR>
+		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
 			Assim temos um sistema escalavel (<it><b>"recursion"</b></it>) e de fácil manuseamento.
-			</p>
-			<BR>
-			<p ALIGN=CENTER>
-				<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Image Not Found" BORDER=0>
-			</p>
 		</p>
 	</section>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
@@ -1433,7 +1432,6 @@
     </TR>
 	<!-- ********************************************************************* -->
 </TABLE>
-<!-- ***</main>*** -->
 <HR>
 <footer>
 <P ALIGN=LEFT>
