--- a/Relatorio_2/LabsisWebPage/Pages/page_8.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_8.html
@@ -16,6 +16,7 @@
   </h2>
 </a>
 <hr/>
+<!-- Code Begins here -->
 <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
 </video>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/a7qRuUAyqCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -42,14 +43,9 @@ Not Supported
 <br>
 <p style="text-align:center;">Centered paragraph.</p> 
 <br>
-
-
-
-
-
-
-
-
-
 </body>
 </html>
+<!-- <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always"> -->
+<!-- <P ALIGN=LEFT STYLE="margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; border: none; padding: 0cm"> -->
+<!-- <div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;"> -->
+
