--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -295,39 +295,22 @@
 <!-- ***MENU 0*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
   	<COL WIDTH=16%*>
-	<TR>
-		<TD COLSPAN=6 BGCOLOR="#ffffff" SDNUM="2070;1046;@">
-			<P ALIGN=CENTER STYLE="background: #0099ff">
-				<BR>
-			</P>
-		</TD>
-	</TR>
-    <BR/>
+	<tr>
+		<td colspan=6><br></td>
+	</tr>
+	<tr>
+		<td colspan=6 BGCOLOR="#0099ff"><br></td>
+	</tr>
 	<!-- ***Video & Image with link *** -->
 	<TR>
-      	<TD COLSPAN=1 WIDTH=10% BGCOLOR="#eeeeee">
-      		</TD>
-			<TD COLSPAN=1 WIDTH=20% BGCOLOR="#eeeeee">
-     	   		<BR/>
-				<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background:#eeeeee">
-        		<!-- <P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee"> -->
-          			<video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" controls width="330">
-          			</video>
-        		</p>
-      		</TD>
-      		<!-- <TD COLSPAN=1 WIDTH=100% BGCOLOR="#eeeeee"> -->
-      	</TD>
-      	<TD COLSPAN=1 WIDTH=65% BGCOLOR="#eeeeee">
+      	<TD COLSPAN=6 WIDTH=50% BGCOLOR="#eeeeee">
         	<BR/>
         	<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
-				<A HREF="https://drive.google.com/file/d/1bWr7jZ4JDo01D4qY3LCxINqDxzL4NP5Y/view?usp=sharing" target="_blank">
+				<A HREF="https://drive.google.com/file/d/1zRkWFehM3FvJSfnqYcyn-Oh6t8iw_wlT/view?usp=sharing" target="_blank">
 				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 alt="Image Not Found" BORDER=0>
 				</A>
 			</P>
 		</TD>
-      	<TD COLSPAN=3 WIDTH=1% BGCOLOR="#eeeeee">
-        	<BR/>
-     	</TD>
 	</TR>
 </TABLE>
 <!-- ***MENU 1*** -->
@@ -375,8 +358,8 @@
 	</TR>
 </TABLE>
 <!-- ***Introdução*** -->
-<DIV STYLE="background-color:#eeeeee;">
-	<section><h3>Resumo</h3>
+<section STYLE="background-color:#eeeeee;">
+	<div><h3>Resumo</h3>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 		O projeto que se pretende fazer é um sistema de posicionamento de painel fotovoltaico para obter maior rendimento
 		de produção de energia, já que é conhecido que se pode tirar proveito até 40%.
@@ -390,8 +373,8 @@
 		<br>
 		O projeto é apenas académico e de simulação em escala pequena ou de bancada.
 	</p>
-	</section>
-	<section><h3>Apresentação</h3>
+	</div>
+	<div><h3>Apresentação</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			Os painéis fotovoltaicos tem vários parâmetros que determinam sua eficiência, a temperatura de funcionamento, 
 			otimização da carga, sua orientação e até limpeza são alguns pormenores, este estado de arte apenas é uma 
@@ -438,8 +421,8 @@
 			</div>
 
 		</P>
-	</section>
-	<section><h3>Estado da Arte</h3>
+	</div>
+	<div><h3>Estado da Arte</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			O projeto em causa pertence a disciplina de <span style="color:green;">Laboratório de Sistemas</span> que da 
 			continuidade as disciplinas de <span style="color:green;">Sistemas Digitais</span> 
@@ -494,7 +477,7 @@
 			nos fornece os dados do local exato da posição do sol, sendo desnecessário a utilização de sensores, aqui este projeto 
 			é flexível pois já íntegra um relógio RTC (Real time clock) com calendário de atualização automática.
 		</P>
-	</section>
+	</div>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 		O objectivo deste trabalho é executar um sistema de orientação solar fiavel utilizando um <b> RTC </b> e sensor <b> LDR </b>, 
 		com sistema interactivo através de <b> display </b> e <b> keypad </b> na qual tem integrado um override de 
@@ -511,7 +494,7 @@
 		<br>
 		<br>
 	</P>
-</DIV>
+</section>
 <!-- ***Menu 2*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
@@ -550,8 +533,8 @@
 	</TR>
 </TABLE>
 <!-- ***Arquitectura*** -->
-<DIV STYLE="background-color:#eeeeee;">
-	<section><h3>Tipo de Microcontrolador</h3>
+<section STYLE="background-color:#eeeeee;">
+	<div><h3>Tipo de Microcontrolador</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 			Os microcontroldores da <b> Atmel </b> de 8 e 32 bits são baseados na arquitetura avançada de <b> Harvard </b> na 
 			qual esta concebido para baixos consumos e performance.
@@ -578,16 +561,16 @@
 				<br>
 				<h4 style="color:blue; margin-left: 4.5cm;">Harvard Architecture<h4>
 		</P>
-	</section>
-	<section><h3>Diagrama de blocos do projecto</h3>
+	</div>
+	<div><h3>Montagem</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Image Not Found" width="450">
 			<br>
 			<br>
 			<br>
 		</P>
-	</section>
-</DIV>
+	</div>
+</section>
 <!-- ***Menu 3*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
@@ -626,8 +609,8 @@
 	</TR>
 </TABLE>
 <!-- ***Hardware*** -->
-<DIV STYLE="background-color:#eeeeee;">
-	<section><h3>Ferramentas</h3>
+<section STYLE="background-color:#eeeeee;">
+	<div><h3>Ferramentas</h3>
 		<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 			<tr>
 				<td WIDTH=65% VALIGN=TOP>
@@ -660,8 +643,8 @@
 				</td>
 			</tr>
 	</table>
-	</section>
-	<section><h3>Equipamento</h3>
+	</div>
+	<div><h3>Equipamento</h3>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 		<div style="vertical-align: top;">
 		<div style="margin-left: 12px; vertical-align: top; display: inline-block; width: 45%;">
@@ -745,9 +728,9 @@
 			<!--<img src="image/hardware/RS2_1.jpg" alt="Image Not Found" width="200">-->
 			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Image Not Found" width="200">-->
 		</div>
-	</section>
-	</section>
-	<section><h3>Projecto e Execução da Mainboard</h3>
+	</div>
+	</div>
+	<div><h3>Projecto e Execução da Mainboard</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			Nesta secção, apenas vou representar imagens do proceso de desenvolvimento 
 			da placa mãe, desde o schematic, board e a palaca populada e pronta a usar, 
@@ -782,8 +765,8 @@
 			<br>
 			<img src="image/board/devboard_1.jpg" alt="Image Not Found" width="650">
 		</div>
-	</section>
-</DIV>
+	</div>
+</section>
   	<!-- ***Menu 4*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
@@ -822,8 +805,8 @@
 	</TR>
 </TABLE>
 <!-- ***Software*** -->
-<DIV STYLE="background-color:#eeeeee;">
-	<section><h3>Programa</h3>
+<section STYLE="background-color:#eeeeee;">
+	<div><h3>Programa</h3>
 		<div style="vertical-align: top;">
 			<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
 				<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
@@ -848,8 +831,8 @@
 				</pe>
 			</div>
 		</div>
-	</section>
-	<section><h3>Fluxograma</h3>
+	</div>
+	<div><h3>Fluxograma</h3>
 		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
 			<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
 				<TR>
@@ -887,7 +870,7 @@
 		<p ALIGN=LEFT style="margin-left: 12px; margin-right: 20px;">
 			Assim temos um sistema escalavel (<it><b>"recursion"</b></it>) e de fácil manuseamento.
 		</p>
-	</section>
+	</div>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 		A programação foi feita em <span style="color:gold;"> linguagem C </span> <A HREF="#Ref3"><span>[3]</span></A> 
 		aplicado nos integrados da <span style="color:gold;"> AVR </span> <A HREF="#Ref8"><span>[8]</span></A>.
@@ -904,7 +887,7 @@
 		<br>
 		<br>
 	</P>
-</DIV>
+</section>
 <!-- ***Menu 5*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
@@ -943,17 +926,27 @@
 	</TR>
 </TABLE>
 <!-- ***Resultados*** -->
-<DIV STYLE="background-color:#eeeeee;">
+<section STYLE="background-color:#eeeeee;">
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
-			evidencias, imagens, fotografias, videos
+		videos:
+		<br>
+		<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
+			<A HREF="still in progress" target="_blank">
+				<IMG SRC="image/board/devboard_1.jpg" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+			</A>
+		</div>
 	</P>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
+		evidencias, imagens, fotografias,
 	</P>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
+		Ainda em progresso.
 	</P>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
+		<br>
+		<br>
 	</P>
-</DIV>
+</section>
 <!-- ***Menu 6*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 >
 	<TR VALIGN=TOP>
@@ -992,7 +985,7 @@
 	</TR>
 </TABLE>
 <!-- ***Conclusoes*** -->
-<DIV STYLE="background-color:#eeeeee;">
+<section STYLE="background-color:#eeeeee;">
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 		O sistema de posicionamento fotovoltaico tem diversas soluções de diferentes Empresas que apostam nas energias 
 		renováveis, diferentes métodos na parte mecânica e elétrica, como esta disciplina pertence na área digital, 
@@ -1026,7 +1019,7 @@
 		<br>
 		<br>
 	</P>
-</DIV>
+</section>
 <!-- ***Menu TEST*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE=" page-break-before: always">
 	<TR VALIGN=TOP>
@@ -1065,9 +1058,7 @@
 	</TR>
 </TABLE>
 <!-- ***Test Code*** -->
-<DIV STYLE="background-color:#eeeeee;">
-	<!-- <P ALIGN=LEFT STYLE="margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; border: none; padding: 0cm"> -->
-	<!-- <span style='color:red; margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; display:inline-block;'>&nbsp;</span> -->
+<section STYLE="background-color:#eeeeee;">
 	<p ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; font-size: 95%; border: none; padding: 0cm">
 		<a href="Pages/page_1.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 1 </span></a>
 		<a href="Pages/page_2.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 2 </span></a>
@@ -1079,7 +1070,7 @@
 		<a href="Pages/page_8.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 8 </span></a>
 		<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 9 </span></a>
 	</p>
-</DIV>
+</section>
 <!-- ***Menu 7*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
@@ -1118,7 +1109,7 @@
 	</TR>
 </TABLE>
 <!-- ***Referencias*** -->
-<DIV STYLE="background-color:#eeeeee;">
+<section STYLE="background-color:#eeeeee;">
 	<h2>LIVROS</h2>
 	<P STYLE="margin-bottom: 0.5cm">
 		<A NAME="_Ref1">
@@ -1401,7 +1392,7 @@
 	<P ALIGN=LEFT STYLE="border: none; padding: 0cm">
 		<BR>
 	</P>
-</DIV>
+</section>
 <!-- ***Last blue bar*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
   	<TR VALIGN=TOP>
@@ -1447,7 +1438,6 @@
 </footer>
 </BODY>
 </HTML>
-<!-- <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always"> -->
+<!-- Welcome to Zombieland -->
 <!-- <P ALIGN=LEFT STYLE="margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; border: none; padding: 0cm"> -->
-
-
+<!-- <span style='color:red; margin-top: 0.51cm; margin-bottom: 0.51cm; margin-left: 40px; margin-right: 40px; display:inline-block;'>&nbsp;</span> -->
